modules/k8s/manifests/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-ingress
  annotations:
   external-dns.alpha.kubernetes.io/hostname: "grafana.pritesh-nimje.me,api.pritesh-nimje.me" 
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: grafana-tls
      hosts:
        - "grafana.pritesh-nimje.me"
        - "api.pritesh-nimje.me"
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "grafana.pritesh-nimje.me"
        - "api.pritesh-nimje.me"
