modules/k8s/manifests/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - istio-ingress/istio-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
